Date: 07. 03. 2019
  Added:
    - Thumbnail image for mod directory
    - Detection of Yuoki Industries modded items to prevent multiplayer desync when placing signs
  Changed:
    - Complete rewrite of sign logic to reduce conflicts in games with very large modpacks
    - Updated technology icons
    - Additional compression of Refined concrete gfx to reduce mod package size
  Bugfixes:
    - Fixed an issue where multiplayer games wouldn't start correctly with a completely new save
    - Fixed an issue when modded items exist that have an icon_size of less than 32 pixels
---------------------------------------------------------------------------------------------------
Version: 0.8.10
Date: 18. 02. 2019
  Bugfixes:
    - Fixed an issue where decorations were not being removed from all concrete variants (thanks to ST-DDT)
  Locales:
    - Added French translation (thanks to Taniotoshi)
    - Updated Russian translation (thanks to scheugen86 and AfoninZ)
---------------------------------------------------------------------------------------------------
Version: 0.8.9
Date: 04. 08. 2018
  Added:
    - Enabled support for multiple players to place signs concurrently in multiplayer games
    - Added console command to allow admins to remove any orphaned signs that are unminable
  Bugfixes:
    - Fixed an issue where placing a sign could sometimes cause a desync in multiplayer games
    - Fixed an issue where an orphaned indestructible sign could be left behind when a player leaves a multiplayer game
  Locales:
    - Updated German and Russian translations (thanks to ST-DDT and diraria)
---------------------------------------------------------------------------------------------------
Version: 0.8.8
Date: 15. 05. 2018
  Added:
    - Added new Landfill tile that places as dirt which avoids an issue where robots would incorrectly use grass items from inventory instead of landfill when placing blueprints