@@ -160,7 +160,7 @@ if DECT.ENABLED["concrete"] then
 			minable = { hardness = 0.2, mining_time = 0.5, result = "dect-concrete-grid" },
 			mined_sound = base_concrete.mined_sound,
 			collision_mask = { "ground-tile" },
-			walking_speed_modifier = 1.4,
+			walking_speed_modifier = base_concrete.walking_speed_modifier,
 			layer = tile_layer.grid,
 			decorative_removal_probability = DECT.CONFIG.SETTINGS["decorative_removal_probability"],
 			variants = tile_variants_material("concrete", "grid"),
@@ -223,7 +223,7 @@ if DECT.ENABLED["painted-concrete"] then
 					minable = { hardness = 0.2, mining_time = 0.5, result = "dect-paint-"..variant.name },
 					mined_sound = base_concrete.mined_sound,
 					collision_mask = { "ground-tile" },
-					walking_speed_modifier = 1.4,
+					walking_speed_modifier = base_concrete.walking_speed_modifier,
 					layer = tile_layer.paint,
 					decorative_removal_probability = DECT.CONFIG.SETTINGS["decorative_removal_probability"],
 					variants = tile_variants_material("concrete", variant.name.."-"..direction.this),
@@ -245,7 +245,7 @@ if DECT.ENABLED["painted-concrete"] then
 					minable = { hardness = 0.2, mining_time = 0.5, result = "dect-paint-refined-"..variant.name },
 					mined_sound = base_concrete.mined_sound,
 					collision_mask = { "ground-tile" },
-					walking_speed_modifier = 1.4,
+					walking_speed_modifier = base_refined_concrete.walking_speed_modifier,
 					layer = tile_layer.refined_paint,
 					decorative_removal_probability = DECT.CONFIG.SETTINGS["decorative_removal_probability"],
 					variants = tile_variants_material("refined-concrete", variant.name.."-"..direction.this),
